--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@
       <ul id="nav-list" class="nav navbar-nav text-center visible-xs">
         <li><a href="#">Chicken</a></li>
         <li><a href="#">Beef</a></li>
-        <li><a href="#">Sushi</a></li>
+        <li><a id="noline" href="#">Sushi</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
